--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iz-math</title>
-    <meta name="title" content="GN-Math">
-    <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+    <meta name="title" content="IZ-Math">
+    <meta name="description" content="gn math mirror made out of spite">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gn-math.github.io/">
-    <meta property="og:title" content="GN-Math">
-    <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+    <meta property="og:title" content="IZ-Math">
+    <meta property="og:description" content="gn math mirror made out of spite">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://gn-math.github.io/">
-    <meta name="twitter:title" content="GN-Math">
-    <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+    <meta name="twitter:title" content="IZ-Math">
+    <meta name="twitter:description" content="gn math mirror made out of spite">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-mode">
     <header>
         <div class="header-content">
-            <div class="logo">gn-math</div>
+            <div class="logo">iz-math</div>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
                 <select id="sortOptions" onchange="sortZones()">
@@ -57,14 +57,7 @@
             </div>
         </div>
     </header>
-    <ins class="adsbygoogle"
-    style="display:block; text-align:center;"
-    data-ad-client="ca-pub-5521219086088837"
-    data-ad-slot="5549138288"
-    data-ad-format="auto"
-    data-full-width-responsive="true"></ins>
    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
 
     <main>
@@ -108,14 +101,8 @@
         </div>
     </div>
 
-    <ins class="adsbygoogle"
-    style="display:block; text-align:center;"
-    data-ad-client="ca-pub-5521219086088837"
-    data-ad-slot="5549138288"
-    data-ad-format="auto"
-    data-full-width-responsive="true"></ins>
+    <ins</ins>
    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
     <footer>
         <div class="footer-links">
@@ -136,4 +123,5 @@
     </script>
 </body>
 </html>
+
 
