--- a/singlefile.html
+++ b/singlefile.html
@@ -734,6 +734,7 @@ const zonesurls = [
 let zonesURL = zonesurls[Math.floor(Math.random() * zonesurls.length)];
 const coverURL = "https://cdn.jsdelivr.net/gh/gn-math/covers@main";
 const htmlURL = "https://cdn.jsdelivr.net/gh/gn-math/html@main";
+        const customzone01 = "https://nootalt6969.github.io/ruffletest/";
 let zones = [];
 let popularityData = {};
 const featuredContainer = document.getElementById('featuredZones');
