--- a/singlefile.html
+++ b/singlefile.html
@@ -734,7 +734,6 @@ const zonesurls = [
 let zonesURL = zonesurls[Math.floor(Math.random() * zonesurls.length)];
 const coverURL = "https://cdn.jsdelivr.net/gh/gn-math/covers@main";
 const htmlURL = "https://cdn.jsdelivr.net/gh/gn-math/html@main";
-        const customzone01 = "https://nootalt6969.github.io/ruffletest/";
 let zones = [];
 let popularityData = {};
 const featuredContainer = document.getElementById('featuredZones');
@@ -781,7 +780,7 @@ async function listZones() {
                     if (zone.url.startsWith("http")) {
                         window.open(zone.url, "_blank");
                     } else {
-                        const url = zone.url.replace("{COVER_URL}", coverURL).replace("{HTML_URL}", htmlURL);
+                        const url = zone.url.replace("{COVER_URL}", coverURL).replace("{URL}", htmlURL);
                         fetch(url+"?t="+Date.now()).then(response => response.text()).then(html => {
                             document.documentElement.innerHTML = html;
                             const popup = document.createElement("div");
